--- a/source.html
+++ b/source.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title>
-sourve
+source
 </title>
 </head>
 <body>
 <p align="center">
-<textarea>
+<textarea style="width=200px;">
 <html>
 <head>
 <title>
