--- a/source.html
+++ b/source.html
@@ -6,7 +6,7 @@ source
 </head>
 <body>
 <p align="center">
-<textarea style="width=200px;">
+<code>
 <html>
 <head>
 <title>
@@ -22,7 +22,7 @@ this is a test website. The reason why i didn't write it in chinese is i don't w
 </p>
 </body>
 </html>
-</textarea>
+</code>
 </p>
 </body>
 </html>
