--- a/source.html
+++ b/source.html
@@ -6,7 +6,7 @@ source
 </head>
 <body>
 <p align="center">
-<script type="text/plain">
+<template>
 <html>
 <head>
 <title>
@@ -22,7 +22,7 @@ this is a test website. The reason why i didn't write it in chinese is i don't w
 </p>
 </body>
 </html>
-</script>
+</template>
 </p>
 </body>
 </html>
