--- a/source.html
+++ b/source.html
@@ -6,23 +6,23 @@ source
 </head>
 <body>
 <p align="center">
-
-&lt;html&rt;
-&lt;head&rt;
-&lt;title&rt;
+<pre>
+&lt;html&gt;
+&lt;head&gt;
+&lt;title&gt;
 hello
-&lt;/title&rt;
-&lt;/head&rt;
-&lt;body&rt;
-&lt;h1 align="center" &rt;
+&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;h1 align="center" &gt;
 hello MR.Yang
-&lt;/h1&rt;
-&lt;p align="center"&rt;
+&lt;/h1&gt;
+&lt;p align="center"&gt;
 this is a test website. The reason why i didn't write it in chinese is i don't want to type more codes to enable it to display chinese
-&lt;/p&rt;
-&lt;/body&rt;
-&lt;/html&rt;
-
+&lt;/p&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</pre>
 </p>
 </body>
 </html>
