--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@ hello MR.Yang
 <p align="center">
 this is a test website. The reason why i didn't write it in chinese is i don't want to type more codes to enable it to display chinese
 </p>
+<h3 align="center">
+<b>
+NOTICE
+</b>
+</p>
+this website has been open-sourced in
+<p>
+<a href="https://dazongzi0428.github.io/source.html">https://dazongzi0428.github.io/source.html</a>
+<p>
 </body>
 </html>
